compiler/fir/analysis-tests/testData/resolve/diagnostics/sealedClassConstructorCall.kt
sealed class A

konst b = <!INVISIBLE_REFERENCE!>A<!>()
